store config in global user folder

--- a/WakatimeIntegration.uplugin
+++ b/WakatimeIntegration.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
+	"Version": 2,
+	"VersionName": "1.0.1",
 	"FriendlyName": "WakatimeIntegration",
 	"Description": "Wakatime Integration for Unreal Engine 4",
 	"Category": "Other",
@@ -14,6 +14,7 @@
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
+	"EnabledByDefault": false,
 	"Modules": [
 		{
 			"Name": "WakatimeIntegration",
