--- a/WakatimeIntegration.uplugin
+++ b/WakatimeIntegration.uplugin
@@ -1,20 +1,18 @@
 {
 	"FileVersion": 3,
-	"Version": 2,
-	"VersionName": "1.0.1",
+	"Version": 3,
+	"VersionName": "2.0.0",
 	"FriendlyName": "WakatimeIntegration",
-	"Description": "Wakatime Integration for Unreal Engine 4",
+	"Description": "Wakatime Integration for Unreal Engine 5",
 	"Category": "Other",
-	"CreatedBy": "ZXMushroom63",
-	"CreatedByURL": "https://github.com/ZXMushroom63",
+	"CreatedBy": "alaotach",
+	"CreatedByURL": "https://github.com/alaotach",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
+	"EngineVersion": "5.7.0",
 	"CanContainContent": true,
-	"IsBetaVersion": false,
-	"IsExperimentalVersion": false,
-	"Installed": false,
-	"EnabledByDefault": false,
+	"Installed": true,
 	"Modules": [
 		{
 			"Name": "WakatimeIntegration",
